tests/struct/bad/struct_duplicate_def.catala_en
```catala
declaration structure Str:
  data fld1 content integer
  data fld2 content money
  data fld1 content date
```

```catala-test-cli
$ catala test-scope S2
┌─[ERROR]─
│
│  Duplicate field fld1 in enumeration Str
│
├─➤ tests/struct/bad/struct_duplicate_def.catala_en:5.8-12:
│   │
│ 5 │   data fld1 content date
│   │        ‾‾‾‾
│
│ First seen here:
├─➤ tests/struct/bad/struct_duplicate_def.catala_en:3.8-12:
│   │
│ 3 │   data fld1 content integer
│   │        ‾‾‾‾
└─
#return code 123#
```
